--- a/PlataFormaDePagosWebApp/Views/USUARIOs/Details.cshtml
+++ b/PlataFormaDePagosWebApp/Views/USUARIOs/Details.cshtml
@@ -31,7 +31,7 @@
         <dt>@Html.DisplayNameFor(model => model.CorreoElectronico)</dt>
         <dd>@Html.DisplayFor(model => model.CorreoElectronico)</dd>
 
-        <dt>@Html.DisplayNameFor(model => model.COMERCIO.Identificacion)</dt>
+        <dt>ID Comercio</dt>
         <dd>@Html.DisplayFor(model => model.COMERCIO.Identificacion)</dd>
 
         <dt>@Html.DisplayNameFor(model => model.FechaDeModificacion)</dt>
