--- a/PlataFormaDePagosWebApp/Views/Account/Register.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Account/Register.cshtml
@@ -35,10 +35,11 @@
         <br>
         <div class="row">
             @Html.LabelFor(m => m.role, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10" aria-labelledby="dropdownMenuLink">
+            <div class="col-md-10">
                 @Html.DropDownListFor(m => m.role, new SelectList(Model.ListaRoles))
             </div>
         </div>
+
         <br>
         <div class="row">
             <div class="offset-md-2 col-md-10">
